--- a/e_step_04_jquery/html/jquery_01.html
+++ b/e_step_04_jquery/html/jquery_01.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=dege">
   <meta name="viewport"
-        content="widrg=debice-width, initial-scale=1.0">
+        content="width=device-width, initial-scale=1.0">
   <meta name="keyword" content="html, css, jquery">
 
   <!--[if lte IE 9]>
@@ -14,16 +14,63 @@
     <script src="../ie/respond/Respond-master/dest/respond.min.js"></script>   
   <![endif]-->
 
-  <link rel="apple-touch-icon" href="favicon.png">
+<!--   <link rel="apple-touch-icon" href="favicon.png">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+ -->
 
-  <link rel="stylesheet" href"">
+
+  <link rel="stylesheet" href="../css/base/reset.css">
+  <link rel="stylesheet" href="../css/base/normalize.css">
   <script src="../js/jquery/jquery-3.2.1.min.js"></script>
   <script src="../js/jquery/jquery-ui.min.js"></script>
 
-  <title></title>
+  <script>
+    // $(document).ready(function(){});
+    // $(function(){});   // 예전방식
+    // 현재는 속도가 느려지는 단점이 있어, body에 작성해주는 추세이다. 
+  </script>
+
+  <title>선택자 및 css이해</title>
+  <style>
+    #wrap{height: auto;min-height:150px; margin:0 auto;}
+    .head_box{width: 960px;height: 150px;margin:0 auto;background-color:#ffa;}
+    h1{height: 50px;float:left; margin:1em; color:#fff;}
+    .gnb{width: 600px;height: 40px;float:right;margin-top:20px;}
+    .gnb>li{float:left; margin-right:10px; position:relative;}
+    .gnb>li:after{content:" "; display:block; width: 2px;height: 80%;background-color:#888;position:absolute; right: -5%; top: 10%;}
+    .gnb>li:last-child{margin-right: 0;}
+    .gnb>li:last-child:after{display: none;}
+    .gnb>li>a{padding:0.2em; color:#fff;}
+    .gnb>li>a:hover{font-weight:bold;}
+
+  </style>
 </head>
 <body>
-  
+  <div id="wrap">
+    <div class="head_box">
+      <h1>jQuery Test</h1>
+      <ul class="gnb">
+        <li><a href="#">list_01</a></li>
+        <li><a href="#">list_02</a></li>
+        <li><a href="#">list_03</a></li>
+        <li><a href="#">list_04</a></li>
+        <li><a href="#">list_05</a></li>
+      </ul>
+    </div>
+  </div>
+
+
+  <!-- jquery -->
+  <script>
+    (function($){
+      //jquery
+      $('#wrap').css({'backgroundColor':'#cfc', 'width':100+'%'});
+      $('.head_box').css({'width':900+'px','backgroundColor':'#076'});
+      $('h1').css({'textAlign':'center','lineHeight':50+'px', 'fontSize':2+'em'});
+
+      // 또는 '900px' 이라고 써도 된다. 그리고! 기본단위가 px이다. 그래서 900이라고만 써줘도 된다. 
+
+    })(this.jQuery) // 즉시 실행 함수. (body에서 함수 작성 방법)
+  </script>
 </body>
 </html>
