jquery_toggle과 fade등등

--- a/e_step_04_jquery/html/jquery.html
+++ b/e_step_04_jquery/html/jquery.html
@@ -34,6 +34,19 @@
     <li>$('?').find(n)</li>
     <li>$('?').siblings(n) : 형제</li>
     <li>$('?').parent(n)</li>
+    <li>$('?').index(n) : </li>
+  </ul>
+  <p>매뉴바 등등을 효과적으로 나타내는 것들</p>
+  <ul>
+    <li>hide() : 숨김</li>
+    <li>show() : 나타남</li>
+    <li>fadeOut() : 천천히 투명하게 없어짐</li>
+    <li>fadeIn() : 천천히 투명하게 나타남</li>
+    <li>sildeUp() : 스윽- 하고 나타는 것</li>
+    <li>sildedown() : 스윽- 하고 사라지는 것</li>
+    <li>toggle() : 기능이 show/hide 두가지밖에 없음.. jquery에서만 쓸 수 있고, javascript에서는 사용 불가.</li>
+    <li>fadeToggle() : display:block과 display:none을 처리함. </li>
+    <li>slideToggle() : </li>
   </ul>
 </body>
 </html>
