--- a/e_step_04_jquery/html/jquery.html
+++ b/e_step_04_jquery/html/jquery.html
@@ -89,6 +89,11 @@
 
         <dd>'trigger' : 스크롤이라든지 등등 일정 동작들을 하다가 정해진 구간에서 실행하는 것.</dd>
         <dd>'draggable' : </dd>
+
+        <dt>event관련 내용</dt>
+        <dd>1. 탭메뉴 만들기
+          <p>가장 쉽게 만들기 : <a href="http://jqueryui.com/tabs/>">http://jqueryui.com/tabs/></a></p>
+        </dd>
     </dl>
 
 
