--- a/e_step_04_jquery/html/jquery.html
+++ b/e_step_04_jquery/html/jquery.html
@@ -52,7 +52,7 @@
     <li>toggle() : 기능이 show/hide 두가지밖에 없음.. jquery에서만 쓸 수 있고, javascript에서는 사용 불가.</li>
     <li>fadeToggle() : display:block과 display:none을 처리함. </li>
     <li>slideToggle() : </li>
-    <li>.addClass() : </li>
+    <li>.addClass() : 마우스 hover시, 화면 바뀌는 것.</li>
     <li>.removeClass() : </li>
     <li>.toggleClass() : </li>
 
