--- a/e_step_04_jquery/html/jquery_04_show_hide.html
+++ b/e_step_04_jquery/html/jquery_04_show_hide.html
@@ -18,6 +18,13 @@
     #gnb>li>button:hover{background-color: #fff;font-weight:bold;}
     #addBanner{width: 100%;height: 500px;background-color:#faa; font-size:3em; display:none;}
     #addBanner>h2{color:#fff; font-size: 2em;}
+
+    /* jquery addClass용*/
+    .view{display:block; background-color:#aff; transform:rotate(5deg); transition:all 1000ms ease-in;}
+    .view:hover{transform:rotateZ(180deg);}
+    .view>h2{text-align:center; padding-top:3em;border-bottom:1em solid #fff;}
+
+
   </style>
 </head>
 <body>
@@ -98,6 +105,7 @@
       // animation처리되는 이벤트 효과에서는 마우스든 다른 효과든 중간에 정지 처리되어야 할 필요가 있다. 
       // 이때, 사용하는 메소드는 stop()이다. 
       // animation효과를 주는 메소드(api)앞에 .stop() 메소드를 연결하기만 하면 간단하게 처리할 수 있다. 
+      // stop(): 반복처리되는 이벤트 기능이 메모리되어 처리되는 것을 삭제하는 기능
 
       //gubList(6)클릭 시 slideDown ( .on() )  --> on off 두개만 하는 것
       gnbList.eq(6).on('click', function(e){
@@ -114,26 +122,39 @@
       //gubList(8)클릭 시 slideToggle ( .on() )  --> on off 두개만 하는 것
       gnbList.eq(8).on('click', function(e){
         e.preventDefault();
-        banner.slideToggle('fast');
+        banner.stop().slideToggle('fast');
       });
 
-      // //gubList(9)클릭 시  ( .on() )  --> on off 두개만 하는 것
-      // gnbList.eq(9).on('click', function(e){
-      //   e.preventDefault();
-      //   banner.();
-      // });
 
-      // //gubList(10)클릭 시  ( .on() )  --> on off 두개만 하는 것
-      // gnbList.eq(10).on('click', function(e){
-      //   e.preventDefault();
-      //   banner.('fast');
-      // });
+         
+         // 하기는 css기능을 사용할 것임!!!!!!
+         // addClass()
+         // addClass()란, css(style)에 존재하는 class 이름을 가져와서 html요소에 삽입하는 것.
+          // 예시 : #gnb.addClass('clearfix');
 
-      // //gubList(11)클릭 시  ( .on() )  --> on off 두개만 하는 것
-      // gnbList.eq(11).on('click', function(e){
-      //   e.preventDefault의fault();
-      //   banner.('fast');
-      // });
+          //removeClass()란, 선택된 요소에 담긴 class값의 이름(기능)을 사라지게 하는 것,
+          //addClass와 반대의 개념
+
+
+
+
+      // gubList(9)클릭 시  ( .on() )
+      gnbList.eq(9).on('click', function(e){
+        e.preventDefault();
+        banner.addClass("view");
+      });
+
+      //gubList(10)클릭 시  ( .on() )
+      gnbList.eq(10).on('click', function(e){
+        e.preventDefault();
+        banner.removeClass('view');
+      });
+
+      //gubList(11)클릭 시  ( .on() )
+      gnbList.eq(11).on('click', function(e){
+        e.preventDefault();
+        banner.toggleClass('view');
+      });
 
 
 
