--- a/e_step_04_jquery/html/jquery_04_slideBox.html
+++ b/e_step_04_jquery/html/jquery_04_slideBox.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
 
   <link rel="stylesheet" href="../css/base/reset.css">
+  <link rel="stylesheet" href="../css/base/normalize.css">
+  <link rel="stylesheet" href="../fontawesome/css/font-awesome.min.css">
   <script src="../js/jquery/jquery-3.2.1.min.js"></script>
   <script src="../js/jquery/jquery-ui.min.js"></script>
   <title>jquery_slide</title>
@@ -18,9 +20,13 @@
       #contentBox dt{width: 100%; height: 1.5em; background-color:#7af; color:#fff;font-size:1.3em; 
                       transition:all 300s ease-out; border-top:1px solid #777;}
       #contentBox dt:hover{background-color:#3af;}
+      #contentBox i{color:#fff; float:right;  margin-right: 2em; transition:all 300ms;}
       #contentBox dd{width: 100%; height: auto; padding:0.5em; box-sizing: border-box; background-color:#d1d1d1; color:#555;}
       #contentBox dd:hover{background-color:#ccc;}
       button{font-size: 1em; color:inherit;}
+
+      /* jquery addClass 요소 */
+      .rotateArrow{transform:rotate(180deg);}
 
   </style>
 </head>
@@ -32,15 +38,25 @@
     <aside id="sideBox"></aside>
     <article id="contentBox">
       <dl>
-        <dt><button type="button">slide title_01</button></dt>
+        <dt><button type="button">slide title_01</button>
+          <i class="fa fa-arrow-circle-down"></i>
+        </dt>
         <dd><strong>slide_content_01</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, cupiditate!</dd>
-        <dt><button type="button">slide title_02</button></dt>
+        <dt><button type="button">slide title_02</button>
+          <i class="fa fa-arrow-circle-down"></i>
+        </dt>
         <dd><strong>slide_content_02</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto exercitationem consectetur nihil recusandae repellendus natus sequi molestias praesentium dignissimos dolore.</dd>
-        <dt><button type="button">slide title_03</button></dt>
+        <dt><button type="button">slide title_03</button>
+          <i class="fa fa-arrow-circle-down"></i>
+        </dt>
         <dd><strong>slide_content_03</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure inventore dignissimos, exercitationem, necessitatibus in et minus. Illo aperiam cupiditate molestias eum sit dolor voluptatibus itaque, inventore, veniam numquam dignissimos nihil.</dd>
-        <dt><button type="button">slide title_04</button></dt>
+        <dt><button type="button">slide title_04</button>
+          <i class="fa fa-arrow-circle-down"></i>
+        </dt>
         <dd><strong>slide_content_04</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis ea nam delectus ad, nobis voluptatibus quis, magni sit sint corporis iure at, vero deleniti perferendis sunt architecto quos nisi quasi nesciunt recusandae voluptatem quibusdam voluptatum quas. Quia eligendi pariatur sunt.</dd>
-        <dt><button type="button">slide title_05</button></dt>
+        <dt><button type="button">slide title_05</button>
+          <i class="fa fa-arrow-circle-down"></i>
+        </dt>
         <dd><strong>slide_content_05</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero numquam tempore non? Laudantium omnis molestias praesentium. Natus aperiam quas consequuntur ea aliquid ad dicta architecto recusandae voluptas similique neque deserunt eos reiciendis illum molestiae impedit officia perspiciatis tempora ipsa, voluptates quibusdam accusantium eveniet minima ducimus! Voluptate sit neque itaque incidunt?</dd>
       </dl>
     </article>
@@ -58,6 +74,7 @@
       conMenu.hide(); // conMenu.css({display:'none'});와 동일한 기능
 
       // 2. dt를 클릭하면 dd를 나타나게 만들기
+      var rotate=0;
       conBtn.on('click', function(e){
         e.preventDefault();
         // 단순하게 show명령어로는 모든 dd가 나타나게 된다. 
@@ -70,10 +87,60 @@
       // 클릭시 다시 올라오도록 slideToggle을 사용함.
         var _$this = $(this);
         // _$this.next('dd').stop().slideToggle();
+        
+      // 8번의 체크사항 검증
+        var viewDD = _$this.next('dd').css('display');
+        console.log(viewDD);
+      
+      // 9. DD상태를 파악한 후에 fontAwesome의 class이름을 변경되게 처리.
+        // if(viewDD == 'none'){
+        //  // 1. 기능
+        //   // _$this.find('i')
+        //   //    .removeClass('fa-arrow-circle-down')
+        //   //    .addClass('fa-arrow-circle-up');
+        //   // 2. 기능
+        //   //  _$this.find('i').addClass('rotateArrow');
+        // }else{
+        //   // 1. 기능 
+        //  // _$this.find('i')
+        //  //     .removeClass('fa-arrow-circle-up')
+        //  //     .addClass('fa-arrow-circle-down');
+        //     // 2. 기능
+        //     // _$this.find('i').removeClass('rotateArrow');
+        // }
+
+        rotate += 180;
+        console.log(rotate);
+        _$this.find('i').css({transform:'rotate('+ rotate +'deg)'});
+        if(rotate == 360){rotate =0;}
+
+
 
       // 4. 다른 것을 클릭했다면, 먼저 열려있던 메뉴항목은 닫히도록 처리.
         conMenu.stop().slideUp();
         _$this.next('dd').stop().slideToggle();
+
+      // 5. this의 i요소에 담긴 class이름: fa-arrow-circle-down을 삭제.
+        // _$this.find('i').removeClass('fa-arrow-circle-down');
+
+      // 6. 삭제된 fa-arrow-circle-down의 class이름 대신 fa-arrow-circle-up을 적용
+        // _$this.find('i').addClass('fa-arrow-circle-up');
+
+      // 5,6번 내용을 한 줄로 정리
+       // _$this.find('i')
+       //       .removeClass('fa-arrow-circle-douw')
+       //       .addClass('fa-arrow-circle-up');
+
+       // 7. 선택된 dt( $(this) )의 바로 뒤에오는 dd의 상태를 확인
+       // 검증 -- 여기서 이러시면 안됩니다. (5번 실행 전에 검증!!!)
+
+       // 8. rotateArrow적용해보기
+         if(viewDD == 'none'){
+          _$this.find('i').addClass('rotateArrow');
+          }else{
+          _$this.find('i').removeClass('rotateArrow');
+          }
+
       });
 
 
