--- a/e_step_04_jquery/html/jquery_05_accordion_01.html
+++ b/e_step_04_jquery/html/jquery_05_accordion_01.html
@@ -72,7 +72,7 @@
           </ul>
         </dd>
         <dt><button type="button">button_08</button></dt>
-        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis itaque repudiandae quasi! Amet vel molestias sapiente quam consequatur possimus omnis, autem obcaecati quisquam accusamus, totam fugit nisi id nihil blanditiis. Pariatur, minima sint porro ex officia excepturi eius laudantium nulla id tempora, aspernatur fugiat officiis ducimus. Aliquid quas expedita quam.
+        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ullam itaque aliquid consequatur veniam et sit architecto, labore, totam nesciunt quibusdam. Illum quidem voluptas itaque ipsa tempora at nobis reprehenderit, dolor ad, facere, quaerat nemo dicta delectus cumque est aperiam sed explicabo placeat cum architecto voluptatum. Magni illum ullam provident id labore odio amet doloribus minus quasi odit, minima adipisci consectetur laboriosam pariatur laudantium nulla repellendus ex. Amet accusantium dolor quas nulla officiis dolore eius fugit vitae exercitationem aliquam voluptatem laudantium reprehenderit suscipit ullam, accusamus similique, eligendi laborum explicabo expedita! Animi sed reiciendis at, possimus, minima aliquam nemo natus unde.
           <ul>
             <li>list_01</li>
             <li>list_02</li>
@@ -80,7 +80,7 @@
           </ul>
         </dd>
         <dt><button type="button">button_09</button></dt>
-        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam quibusdam nulla porro nihil, tempore ipsa voluptate voluptas veritatis aut, culpa perferendis accusantium, iusto ab! Facere alias tempore doloremque architecto pariatur maxime fugit labore quos, quam beatae rem deleniti aperiam inventore recusandae dignissimos praesentium, a! Rerum animi rem inventore illum fugit!
+        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, recusandae.
           <ul>
             <li>list_01</li>
             <li>list_02</li>
@@ -88,7 +88,7 @@
           </ul>
         </dd>
         <dt><button type="button">button_10</button></dt>
-        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel explicabo odio at molestias labore, laboriosam magni quibusdam reiciendis cumque voluptate officia placeat autem, nisi similique neque quasi animi unde doloribus incidunt laudantium. Facere aut, esse temporibus mollitia doloribus tempora laboriosam aliquam reiciendis perferendis consequuntur nobis necessitatibus, porro, inventore consectetur maxime?
+        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui animi nisi eveniet quisquam explicabo fugit dolorem dolorum corporis, impedit expedita modi! Possimus cupiditate ut dicta labore quos amet tenetur doloribus voluptates laudantium ipsum aperiam dolore reiciendis, facere necessitatibus magni deleniti, hic eos modi fuga eius veritatis. Sapiente saepe, velit iure!
           <ul>
             <li>list_01</li>
             <li>list_02</li>
@@ -100,6 +100,7 @@
 
 
 
-  <script src="../js/src/accordion_01.js"></script>
+  <!-- <script src="../js/src/accordion_01.js"></script> -->
+  <script src="../js/src/accodion_listCheck.js"></script>
 </body>
 </html>
