--- a/e_step_04_jquery/html/jquery_08_slide_button.html
+++ b/e_step_04_jquery/html/jquery_08_slide_button.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="../css/base/reset.css">
   <link rel="stylesheet" type="text/css" href="../css/base/normalize.css">
   <link rel="stylesheet" type="text/css" href="../css/src/slide_button.css">
+  <link rel="stylesheet" type="text/css" href="../fontAwesome/css/font-awesome.min.css">
   <script src="../js/jquery/jquery-3.2.1.min.js"></script>
   <script src="../js/jquery/jquery-ui.min.js"></script>
   <title>Document</title>
@@ -22,7 +23,7 @@
         <h2>contentBox</h2>
         <div class="slide_btn">
           <h3>슬라이드 버튼</h3>
-          <button type="button"><i class="fa fa"></i>열기</button>
+          <button type="button"><span>열기</span><i class="fa fa-arrow-right" aria-hidden="ture"></i></button>
           <ul>
             <li><a href="#"><span>원빈</span></a></li>
             <li><a href="#"><span>장동윤</span></a></li>
