--- a/e_step_04_jquery/html/jquery_09_gallery_02.html
+++ b/e_step_04_jquery/html/jquery_09_gallery_02.html
@@ -13,40 +13,46 @@
 <body>
   <div id="wrap">
     <h1>gallery image</h1>
-    <h2 class="hidden"><strong>부제:</strong>무식하게 만드는 갤러리 페이지이지만, 자바스크립트는 세상 편하겠지</h2>
+      <ul>
+        <li>1. 이미지 처리에 대한 규칙이 필요하다.</li>
+        <li>2. 확장자 명이 무조건 동일하게 처리되어야 한다.</li>
+        <li>3. 변경된 큰 이미지에 대한 설명을 변경하기가 까다롭다.</li>
+        <li>4. data속성을 이용하여 처리해야 한다.</li>
+        <li>결론 : 이것도 저것도 아닌 이상한 갤러기가 된다. </li>
+      </ul>
     <div class="gallery">
       <div class="gallery_box">
         <img src="../img/modal_gallery/img/j01_big.jpg" alt="사용이미지설명">
       </div>
       <ul class="gallery_list">
-        <li data-src="../img/modal_gallery/img/j01_big.jpg" data-alt="변경될 큰 이미지에 대한 상세한 설명 첨부 1">
+        <li>
           <button type="button"><img src="../img/modal_gallery/img/j01.jpg" alt="사용이미지설명"></button>
         </li>
-        <li data-src="../img/modal_gallery/img/j02_big.jpg" data-alt="변경될 큰 이미지에 대한 상세한 설명 첨부 2">
+        <li>
           <button type="button"><img src="../img/modal_gallery/img/j02.jpg" alt="사용이미지설명"></button>
         </li>
-        <li data-src="../img/modal_gallery/img/j03_big.jpg" data-alt="변경될 큰 이미지에 대한 상세한 설명 첨부 3">
+        <li>
           <button type="button"><img src="../img/modal_gallery/img/j03.jpg" alt="사용이미지설명"></button>
         </li>
-        <li data-src="../img/modal_gallery/img/j04_big.jpg" data-alt="변경될 큰 이미지에 대한 상세한 설명 첨부 4">
+        <li>
           <button type="button"><img src="../img/modal_gallery/img/j04.jpg" alt="사용이미지설명"></button>
         </li>
-        <li data-src="../img/modal_gallery/img/j05_big.jpg" data-alt="변경될 큰 이미지에 대한 상세한 설명 첨부 5">
+        <li>
           <button type="button"><img src="../img/modal_gallery/img/j05.jpg" alt="사용이미지설명"></button>
         </li>
-        <li data-src="../img/modal_gallery/img/j06_big.jpg" data-alt="변경될 큰 이미지에 대한 상세한 설명 첨부 6">
+        <li>
           <button type="button"><img src="../img/modal_gallery/img/j06.jpg" alt="사용이미지설명"></button>
         </li>
-        <li data-src="../img/modal_gallery/img/j07_big.jpg" data-alt="변경될 큰 이미지에 대한 상세한 설명 첨부 7">
+        <li>
           <button type="button"><img src="../img/modal_gallery/img/j07.jpg" alt="사용이미지설명"></button>
         </li>
-        <li data-src="../img/modal_gallery/img/j08_big.jpg" data-alt="변경될 큰 이미지에 대한 상세한 설명 첨부 8">
+        <li>
           <button type="button"><img src="../img/modal_gallery/img/j08.jpg" alt="사용이미지설명"></button>
         </li>
-        <li data-src="../img/modal_gallery/img/j09_big.jpg" data-alt="변경될 큰 이미지에 대한 상세한 설명 첨부 9">
+        <li>
           <button type="button"><img src="../img/modal_gallery/img/j09.jpg" alt="사용이미지설명"></button>
         </li>
-        <li data-src="../img/modal_gallery/img/j10_big.jpg" data-alt="변경될 큰 이미지에 대한 상세한 설명 첨부 10">
+        <li>
           <button type="button"><img src="../img/modal_gallery/img/j10.jpg" alt="사용이미지설명"></button>
         </li>
       </ul>
@@ -54,6 +60,6 @@
   </div>
 
   <!-- script -->
-  <script src="../js/src/gallery_01.js"></script>
+  <script src="../js/src/gallery_02.js"></script>
 </body>
 </html>
