--- a/e_step_04_jquery/html/jquery_11_json_01.html
+++ b/e_step_04_jquery/html/jquery_11_json_01.html
@@ -35,6 +35,7 @@
       <li></li>
     </ul>
   </header>
-  <script src="../js/src/json_01.js"></script>
+  <!-- <script src="../js/src/json_01.js"></script> -->
+  <script src="../js/src/json_02.js"></script>
 </body>
 </html>
