--- a/e_step_04_jquery/html/jquery_13_modal_01.html
+++ b/e_step_04_jquery/html/jquery_13_modal_01.html
@@ -24,19 +24,51 @@
     <section id="advBox"></section>
     <article id="contentBox">
       <h2>gallery image</h2>
-      
+
       <div class="modal_box"></div>
       <div class="modal_bg"></div>
 
-      <ul>
-        <li><button type="button"><span>img_01</span></button></li>
-        <li><button type="button"><span>img_02</span></button></li>
-        <li><button type="button"><span>img_03</span></button></li>
-        <li><button type="button"><span>img_04</span></button></li>
-        <li><button type="button"><span>img_05</span></button></li>
-        <li><button type="button"><span>img_06</span></button></li>
-        <li><button type="button"><span>img_07</span></button></li>
-        <li><button type="button"><span>img_08</span></button></li>
+      <ul class="gallery_list">
+        <li>
+          <button type="button">
+            <span>img_01</span>
+          </button>
+        </li>
+        <li>
+          <button type="button">
+            <span>img_02</span>
+          </button>
+        </li>
+        <li>
+          <button type="button">
+            <span>img_03</span>
+          </button>
+        </li>
+        <li>
+          <button type="button">
+            <span>img_04</span>
+          </button>
+        </li>
+        <li>
+          <button type="button">
+            <span>img_05</span>
+          </button>
+        </li>
+        <li>
+          <button type="button">
+            <span>img_06</span>
+          </button>
+        </li>
+        <li>
+          <button type="button">
+            <span>img_07</span>
+          </button>
+        </li>
+        <li>
+          <button type="button">
+            <span>img_08</span>
+          </button>
+        </li>
       </ul>
     </article>
     <footer id="footBox"></footer>
