--- a/e_step_04_jquery/html/jquery_18_page-XY_02.html
+++ b/e_step_04_jquery/html/jquery_18_page-XY_02.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="ko-KR">
 <head>
   <meta charset="UTF-8">
@@ -10,22 +9,23 @@
   
     <link rel="stylesheet" href="../css/base/reset.css" />
     <link rel="stylesheet" href="../css/base/normalize.css" />
-    <link rel="stylesheet" href="../css/src/page-XY_01.css" />
+    <link rel="stylesheet" href="../css/src/page-XY_02.css" />
   
     <script src="../js/jquery/jquery-3.2.1.min.js"></script>
     <script src="../js/jquery/jquery-ui.min.js"></script>
-  <title>Document</title>
+  <title>page X-Y 이미지 값 변경 처리하기</title>
 </head>
 
 <body>
   <div id="wrap">
-    <h1>page-X, page-Y</h1>
-    <p class="x"><strong>page-x</strong><span></span></p>
-    <p class="y"><strong>page-y</strong><span></span></p>
-    
-    <div class="my_box">my box</div>
-
+    <header id="headBox">headBox</header>
+    <section id="imgMove">
+      <p><strong>imgMove</strong><span></span></p>
+      <div class="my_img"></div>
+    </section>
+    <article id="contentBox">contentBox</article>
+    <footer id="footBox">footBox</footer>
   </div>
-  <script src="../js/src/page-XY_01.js"></script>
+  <script src="../js/src/page-XY_02.js"></script>
 </body>
 </html>
